--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,3 +6,15 @@ services:
       - .:/usr/src/app
     ports:
       - "3000:3000"
+    env_file:
+      - .env/development/database
+      - .env/development/web
+
+  database:
+    image: mysql:5.7
+    restart: always
+    ports:
+      - "3307:3306"
+    env_file:
+      - .env/development/database
+
