--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,3 +15,4 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: "kiriakov"
           heroku_email: "sergioibanezmoreno@gmail.com"
+          usedocker: true
