--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,9 +26,7 @@ jobs:
     # Build the Docker image
     - name: Build & Publish
       run: |
-        gcloud config set project ${{ secrets.GCP_PROJECT_ID }}
-        gcloud builds submit --tag gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APPLICATION }}
-        gcloud config set run/region europe-west1
+        docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APPLICATION }}
       
     # Deploy the Docker image to the GKE cluster
     - name: Deploy
