--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,7 @@ jobs:
           ruby-version: 2.7.2
       - name: Install dependencies
         run: |
+          mysql -h 127.0.0.1 --port 8888 -u root -ppassword -e 'CREATE DATABASE IF NOT EXISTS test;'
           gem install bundler
           bundler install
       - name: Create database
