And another thing

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
       database:
         image: mysql:5.7
         ports:
-          - 3306
+          - 3306:3306
         env:
           MYSQL_USER: root
           MYSQL_PASSWORD: password
@@ -30,11 +30,12 @@ jobs:
       - name: Create database
 
         env:
-          MYSQL_USER: user
+          MYSQL_USER: root
           MYSQL_PASSWORD: password
           MYSQL_DATABASE: test
           MYSQL_ROOT_PASSWORD: password
         run: |
+          mysql -h 127.0.0.1 --port 3306 -u root -p password -e 'CREATE DATABASE IF NOT EXISTS test;'
           bundler exec rails db:create RAILS_ENV=test
           bundler exec rails db:migrate RAILS_ENV=test
       - name: Run tests
