--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,10 @@ jobs:
         run: |
           gem install bundler
           bundler install
+      - name: Enable MySQL
+        run: |
+          sudo systemctl enable mysql.service
+          sudo systemctl start mysql.service
       - name: Create database
 
         env:
