--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,10 +8,10 @@ jobs:
     name: RSpec
     runs-on: ubuntu-latest
     services:
-      database:
+      mysql:
         image: mysql:5.7
         ports:
-          - 3306:3306
+          - 3306
         env:
           MYSQL_ROOT_PASSWORD: password
         options: --health-cmd "mysqladmin ping" --health-interval 10s --health-timeout 5s --health-retries 30
@@ -24,12 +24,12 @@ jobs:
         run: |
           gem install bundler
           bundler install
-      - name: Enable MySQL
+      - name: Verify MySQL connection from host
         run: |
-          sudo systemctl enable mysql.service
-          sudo systemctl start mysql.service
+          sudo apt-get install -y mysql-client libmysqlclient-dev
+          mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports[3306] }} -uroot -proot -e "SHOW GRANTS FOR 'root'@'localhost'"
+          mysql_tzinfo_to_sql /usr/share/zoneinfo | mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports[3306] }} -uroot -proot mysql
       - name: Create database
-
         env:
           MYSQL_USER: root
           MYSQL_PASSWORD: password
