--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
           MYSQL_HOST: 127.0.0.1
           # tell Rails to use proper port for MySQL
           DB_PORT: ${{ job.services.mysql.ports[3306] }}  
-        run: bundler exec rspec spec
+        run: RAILS_ENV=test bundler exec rspec spec
       - name: Upload coverage results    
         uses: actions/upload-artifact@master
         if: always()
