Setting env at the beginning

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,8 +47,8 @@ jobs:
           DB_PORT: ${{ job.services.mysql.ports[3306] }}  
         run: |
           sudo service mysql start
-          bundler exec rails db:create RAILS_ENV=test
-          bundler exec rails db:migrate RAILS_ENV=test
+          RAILS_ENV=test bundler exec rails db:create
+          RAILS_ENV=test bundler exec rails db:migrate
       - name: Run tests
         env:
           MYSQL_USER: root
