--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,6 @@ services:
       - database
     links:
       - database
-    stdin_open: true
-    tty: true
+    # stdin_open: true
+    # tty: true
 
