--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -76,11 +76,11 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Cache gems
-      uses: actions/cache@v2
-      with:
-        path: vendor/bundle
-        key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
+    # - name: Cache gems
+    #   uses: actions/cache@v2
+    #   with:
+    #     path: vendor/bundle
+    #     key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
 
     # Setup gcloud CLI
     - name: Set up Google Cloud SDK
