--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -98,7 +98,7 @@ jobs:
     # Build the Docker image
     - name: Build & Publish
       run: |
-        docker build --build-arg RAILS_MASTER_KEY=${{ secrets.RAILS_MASTER_KEY }} -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APPLICATION }}:${{  github.sha }} .
+        docker build --build-arg RAILS_MASTER_KEY=${{ secrets.RAILS_MASTER_KEY }} --build-arg SECRET_KEY_BASE=${{ secrets.SECRET_KEY_BASE }} -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APPLICATION }}:${{  github.sha }} .
         docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_APPLICATION }}:${{  github.sha }}
       
     # Deploy the Docker image to the GKE cluster
