--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,73 +4,73 @@ on:
     branches:
       - main
 jobs:
-  # rspec-test:
-  #   name: RSpec
-  #   runs-on: ubuntu-latest
-  #   services:
-  #     mysql:
-  #       image: mysql:5.7
-  #       ports:
-  #         - 3306
-  #       env:
-  #         MYSQL_ROOT_PASSWORD: root
-  #       options: --health-cmd "mysqladmin ping" --health-interval 10s --health-timeout 5s --health-retries 30
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: actions/setup-ruby@v1
-  #       with:
-  #         ruby-version: 2.7.2
-  #     - uses: actions/cache@v2
-  #       with:
-  #         path: vendor/bundle
-  #         key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
-  #         restore-keys: |
-  #           ${{ runner.os }}-gems-   
+  rspec-test:
+    name: RSpec
+    runs-on: ubuntu-latest
+    services:
+      mysql:
+        image: mysql:5.7
+        ports:
+          - 3306
+        env:
+          MYSQL_ROOT_PASSWORD: root
+        options: --health-cmd "mysqladmin ping" --health-interval 10s --health-timeout 5s --health-retries 30
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 2.7.2
+      - uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-   
 
-  #     - name: Install dependencies
-  #       run: |
-  #         gem install bundler
-  #         bundler install
-  #     - name: Verify MySQL connection from host
-  #       run: |
-  #         sudo apt-get install -y mysql-client libmysqlclient-dev
-  #         mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports[3306] }} -uroot -proot -e "SHOW GRANTS FOR 'root'@'localhost'"
-  #         mysql_tzinfo_to_sql /usr/share/zoneinfo | mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports[3306] }} -uroot -proot mysql
-  #     - name: Create database
-  #       env:
-  #         MYSQL_USER: root
-  #         MYSQL_PASSWORD: root
-  #         MYSQL_DATABASE_TEST: app_test
-  #         MYSQL_ROOT_PASSWORD: root
-  #         MYSQL_HOST: 127.0.0.1
-  #         RAILS_ENV: test
-  #         # tell Rails to use proper port for MySQL
-  #         DB_PORT: ${{ job.services.mysql.ports[3306] }}  
-  #       run: |
-  #         sudo service mysql start
-  #         RAILS_ENV=test bundler exec rails db:create
-  #         RAILS_ENV=test bundler exec rails db:migrate
-  #     - name: Run tests
-  #       env:
-  #         MYSQL_USER: root
-  #         MYSQL_PASSWORD: root
-  #         MYSQL_DATABASE_TEST: app_test
-  #         MYSQL_ROOT_PASSWORD: root
-  #         MYSQL_HOST: 127.0.0.1
-  #         RAILS_ENV: test
-  #         # tell Rails to use proper port for MySQL
-  #         DB_PORT: ${{ job.services.mysql.ports[3306] }}  
-  #       run: RAILS_ENV=test bundler exec rspec spec
-  #     - name: Upload coverage results    
-  #       uses: actions/upload-artifact@master
-  #       if: always()
-  #       with:
-  #         name: coverage-report
-  #         path: coverage
+      - name: Install dependencies
+        run: |
+          gem install bundler
+          bundler install
+      - name: Verify MySQL connection from host
+        run: |
+          sudo apt-get install -y mysql-client libmysqlclient-dev
+          mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports[3306] }} -uroot -proot -e "SHOW GRANTS FOR 'root'@'localhost'"
+          mysql_tzinfo_to_sql /usr/share/zoneinfo | mysql --host 127.0.0.1 --port ${{ job.services.mysql.ports[3306] }} -uroot -proot mysql
+      - name: Create database
+        env:
+          MYSQL_USER: root
+          MYSQL_PASSWORD: root
+          MYSQL_DATABASE_TEST: app_test
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_HOST: 127.0.0.1
+          RAILS_ENV: test
+          # tell Rails to use proper port for MySQL
+          DB_PORT: ${{ job.services.mysql.ports[3306] }}  
+        run: |
+          sudo service mysql start
+          RAILS_ENV=test bundler exec rails db:create
+          RAILS_ENV=test bundler exec rails db:migrate
+      - name: Run tests
+        env:
+          MYSQL_USER: root
+          MYSQL_PASSWORD: root
+          MYSQL_DATABASE_TEST: app_test
+          MYSQL_ROOT_PASSWORD: root
+          MYSQL_HOST: 127.0.0.1
+          RAILS_ENV: test
+          # tell Rails to use proper port for MySQL
+          DB_PORT: ${{ job.services.mysql.ports[3306] }}  
+        run: RAILS_ENV=test bundler exec rspec spec
+      - name: Upload coverage results    
+        uses: actions/upload-artifact@master
+        if: always()
+        with:
+          name: coverage-report
+          path: coverage
           
   setup-build-publish-deploy:
     name: Setup, Build, Publish, and Deploy
-    # needs: rspec-test
+    needs: rspec-test
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
