--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,25 @@ jobs:
         run: |
           gem install bundler
           bundler install
+
+      - name: Setup Node
+        uses: actions/setup-node@v2
+        with:
+          node-version: 11
+      - name: Find yarn cache location
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: JS package cache
+        uses: actions/cache@v2
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+      - name: Install packages
+        run: |
+          yarn install --pure-lockfile
+
       - name: Verify MySQL connection from host
         run: |
           sudo apt-get install -y mysql-client libmysqlclient-dev
