--- a/spec/fixtures/scenarios.yml
+++ b/spec/fixtures/scenarios.yml
@@ -1,11 +1,9 @@
 bash:
-  id: 1
-  content: 'docker-compose exec web bash'
-  example: '<div>to create a bash within the container</div>'
+  content: docker-compose exec web bash
+  example: <div>to create a bash within the container</div>
   cheatsheet: docker_compose
 
 build:
-  id: 2
-  content: 'docker-compose build'
-  example: '<div>to rebuild the image</div>'
+  content: docker-compose build
+  example: <div>to rebuild the image</div>
   cheatsheet: docker_compose
