Added capybara tests for groups

--- a/spec/fixtures/group.yml
+++ b/spec/fixtures/group.yml
@@ -3,3 +3,9 @@ docker:
   creator_type: User
   creator: sergio
   cheatsheets: docker_compose
+
+rails:
+  name: rails
+  creator_type: User
+  creator: sergio
+  cheatsheets: docker_compose
